Fixed spacing of metrics per registry

--- a/app/static/css/docker-registry-manager.css
+++ b/app/static/css/docker-registry-manager.css
@@ -190,6 +190,8 @@ ul {list-style-type: none;}
 }
 
 .metric{
+  margin-top: 10px;
+  padding-bottom: 10px;
   text-align: center;
   color: #737373;
 }
